--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,3 +77,9 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pnpm release:win
+      - name: Upload Windows Artifact
+        if: startsWith(matrix.os, 'windows')
+        uses: actions/upload-artifact@v4
+        with:
+          name: pear-desktop-windows
+          path: dist/*.exe
